<resources>
    <string name="app_name">My Daily Skincare</string>
    <string name="action_view_db">View Database</string>
    <string name="action_go_to_date">Scroll to date…</string>
    <string name="main_demo_text_first">Welcome to My Daily Skincare! \n\n Manage and track your daily routines and skin condition!</string>
    <string name="main_demo_text_second">Tap a date on the calendar to go to that date\'s diary entry. \n\n When you return to this screen that date on the calendar will be colored to reflect your skin\'s overall condition on that date.</string>
    <string name="main_demo_text_third">Open the navigation menu at the top of the screen to manage your routines, products, ingredients and analytics tools.</string>
    <string name="main_demo_get_started">GET STARTED</string>
    <string name="navigation_today_entry">Today\'s Diary Entry</string>
    <string name="navigation_routines">Routines</string>
    <string name="navigation_products">Products</string>
    <string name="navigation_ingredients">Ingredients</string>
    <string name="navigation_analytics">Analytics</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="delete_button_string">Delete</string>
    <string name="save_button_string">Save</string>
    <string name="update_button_string">Update</string>
    <string name="cancel_string">Cancel</string>
    <string name="no_changes_string">No changes to save</string>
    <string name="toast_save_success">Save successful</string>
    <string name="toast_save_failed">Error saving entry</string>
    <string name="error_loading">Error loading data</string>
    <string name="toast_delete_successful">Entry deleted</string>
    <string name="toast_delete_failed">Error deleting entry</string>
    <string name="toast_create_failed">Error creating entry</string>
    <string name="alert_delete_confirm">delete</string>
    <string name="done_string">DONE</string>
    <string name="no_string">no</string>
    <string name="go_string">GO</string>
    <string name="add_remove_string">Add/Remove</string>
    <string name="toast_enter_valid_name">Please enter a name</string>
    <string name="field_name_string">name</string>
    <string name="skip_string">SKIP</string>
    <string name="next_string">NEXT</string>
    <string name="preference_main_demo_seen" translatable="false">main demo seen</string>
    <string name="preference_diary_entry_demo_seen" translatable="false">diary entry demo seen</string>
    <string name="preference_routine_demo_seen" translatable="false">routine demo seen</string>
    <string name="preference_analytics_demo_seen" translatable="false">analytics demo seen</string>
    <string name="diary_entry_condition_excellent">Excellent</string>
    <string name="diary_entry_condition_very_good">Very Good</string>
    <string name="diary_entry_condition_good">Good</string>
    <string name="diary_entry_condition_fair">Fair</string>
    <string name="diary_entry_condition_poor">Poor</string>
    <string name="diary_entry_condition_very_poor">Very Poor</string>
    <string name="diary_entry_condition_severe">Severe</string>
    <string name="diary_entry_slider_not_specified">Not Specified</string>
    <string name="diary_entry_slider_exercise_none">None</string>
    <string name="diary_entry_slider_exercise_light">Light</string>
    <string name="diary_entry_slider_exercise_moderate">Moderate</string>
    <string name="diary_entry_slider_exercise_intense">Intense</string>
    <string name="diary_entry_slider_hygiene_body_only">Body Only</string>
    <string name="diary_entry_slider_hygiene_hair_only">Hair Only</string>
    <string name="diary_entry_slider_hygiene_body_and_hair">Body + Hair</string>
    <string name="diary_entry_slider_water_one_three">1 &#8211; 3 Glasses</string>
    <string name="diary_entry_slider_water_four_six">4 &#8211; 6 Glasses</string>
    <string name="diary_entry_slider_water_seven_nine">7 &#8211; 9 Glasses</string>
    <string name="diary_entry_slider_water_ten_plus">10+ Glasses</string>
    <string name="diary_entry_skin_condition_string">My Skin Today</string>
    <string name="diary_entry_general_condition">Overall Condition</string>
    <string name="diary_entry_status_modifier_label">Status</string>
    <string name="diary_entry_forehead_condition">Forehead</string>
    <string name="diary_entry_nose_condition">Nose</string>
    <string name="diary_entry_cheeks_condition">Cheeks</string>
    <string name="diary_entry_lips_condition">Lips</string>
    <string name="diary_entry_chin_condition">Chin</string>
    <string name="diary_entry_show_more_string">Show more</string>
    <string name="diary_entry_show_less_string">Show less</string>
    <string name="diary_entry_comment">comments</string>
    <string name="diary_entry_show_more_content_description">Show more skin condition sliders.</string>
    <string name="diary_entry_routines_strings">Today\'s Routines</string>
    <string name="diary_entry_lifestyle_strings">Today\'s Lifestyle</string>
    <string name="diary_entry_lifestyle_exercise">Exercise</string>
    <string name="diary_entry_lifestyle_diet">Diet</string>
    <string name="diary_entry_lifestyle_hygiene">Hygiene</string>
    <string name="diary_entry_lifestyle_water_intake">Water Intake</string>
    <string name="diary_entry_lifestyle_on_period">On Period</string>
    <string name="diary_entry_delete_alert_dialog_message">Are you sure you want to delete this entry?</string>
    <string name="diary_entry_delete_alert_dialog_title">Delete diary entry?</string>
    <string name="diary_entry_back_alert_dialog_title">Save changes?</string>
    <string name="diary_entry_back_alert_dialog_message">Save changes made to this entry?</string>
    <string name="diary_entry_back_alert_save_new_entry_title">Save entry?</string>
    <string name="diary_entry_back_alert_save_new_entry_message">Do you want to save this new entry?</string>
    <string name="diary_entry_no_routines_string">press ADD/REMOVE to add a routine to this diary entry</string>
    <string name="diary_entry_demo_text_first">A diary entry details the conditions of your skin, the routines you applied and other lifestyle metrics for a date.</string>
    <string name="diary_entry_demo_text_second">Routines specified to be applied daily or on this day of the week will be added automatically. \n\nPress the ADD/REMOVE button to include other routines or remove routines.</string>
    <string name="diary_entry_demo_text_third">We recommend filling out your diary entry at the end of your day so you can accurately document your lifestyle levels!</string>
    <string name="ingredient_name_string">ingredient name</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredient_activity_title">Ingredient</string>
    <string name="ingredient_activity_title_new">New Ingredient</string>
    <string name="ingredient_irritant">Skin irritant</string>
    <string name="ingredient_comment">comments</string>
    <string name="new_ingredient">New ingredient</string>
    <string name="ingredient_delete_alert_dialog_message">Are you sure you want to delete this ingredient?</string>
    <string name="ingredient_delete_alert_dialog_title">Delete ingredient?</string>
    <string name="ingredient_back_alert_dialog_title">Save ingredient?</string>
    <string name="ingredient_back_alert_dialog_message">Do you want to save this new ingredient?</string>
    <string name="ingredient_main_no_ingredients">press the button below to add a new ingredient</string>
    <string name="product_name_string">product name</string>
    <string name="brand_string">product brand</string>
    <string name="product_activity_title">Product</string>
    <string name="product_activity_title_new">New Product</string>
    <string name="products">Products</string>
    <string name="new_product">New product</string>
    <string name="product_ingredients">Ingredients</string>
    <string name="product_type">Type</string>
    <string name="product_delete_alert_dialog_message">Are you sure you want to delete this product?</string>
    <string name="product_delete_alert_dialog__title">Delete product?</string>
    <string name="product_back_alert_dialog_title">Save product?</string>
    <string name="product_back_alert_dialog_message">Do you want to save this new product?</string>
    <string name="product_no_ingredients_to_display">press ADD/REMOVE to add an ingredient to this product</string>
    <string name="product_main_no_products">press the button below to add a new product</string>
    <string name="product_types_none">--</string>
    <string name="product_types_cleanser">Cleanser</string>
    <string name="product_types_toner">Toner</string>
    <string name="product_types_serum">Serum</string>
    <string name="product_types_moisturizer">Moisturizer</string>
    <string name="product_types_exfoliator">Exfoliator</string>
    <string name="product_types_treatment">Treatment</string>
    <string name="product_types_mask">Mask</string>
    <string name="product_types_sun">Sun Care</string>
    <string name="product_types_eye">Eye Care</string>
    <string name="product_types_lip">Lip Care</string>
    <string name="product_types_self">Self Tanner</string>
    <string name="product_types_other">Other</string>
    <string-array name="product_types_array">
        <item>@string/product_types_none</item>
        <item>@string/product_types_cleanser</item>
        <item>@string/product_types_toner</item>
        <item>@string/product_types_serum</item>
        <item>@string/product_types_moisturizer</item>
        <item>@string/product_types_exfoliator</item>
        <item>@string/product_types_treatment</item>
        <item>@string/product_types_mask</item>
        <item>@string/product_types_sun</item>
        <item>@string/product_types_eye</item>
        <item>@string/product_types_lip</item>
        <item>@string/product_types_self</item>
        <item>@string/product_types_other</item>
    </string-array>
    <string name="routine_new_routine">New routine</string>
    <string name="routine_name_string">routine name</string>
    <string name="routine_activity_title">Routine</string>
    <string name="routine_activity_title_new">New Routine</string>
    <string name="routine_application_time">Time of application</string>
    <string name="routine_products">Products</string>
    <string name="routine_comment">comments</string>
    <string name="routine_radio_AM">AM</string>
    <string name="routine_radio_PM">PM</string>
    <string name="routine_frequency_title">Application frequency</string>
    <string name="routine_radio_frequency_needed">As needed</string>
    <string name="routine_radio_frequency_daily">Daily</string>
    <string name="routine_radio_frequency_specified">On selected days</string>
    <string name="routine_frequency_monday">Mon</string>
    <string name="routine_frequency_tuesday">Tue</string>
    <string name="routine_frequency_wednesday">Wed</string>
    <string name="routine_frequency_thursday">Thu</string>
    <string name="routine_frequency_friday">Fri</string>
    <string name="routine_frequency_saturday">Sat</string>
    <string name="routine_frequency_sunday">Sun</string>
    <string name="routine_toast_select_days">Select the days on which this routine is applied or choose a different frequency</string>
    <string name="routine_delete_alert_dialog_title">Delete Routine?</string>
    <string name="routine_delete_alert_dialog_message">Are you sure you want to delete this routine?</string>
    <string name="routine_no_products_text_string">press ADD/REMOVE to add a product to this routine</string>
    <string name="item_list_select_ingredients">Select ingredients</string>
    <string name="item_list_new_string">New</string>
    <string name="item_list_no_entries_found">press the NEW button to create</string>
</resources>