<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/item_dialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/item_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/item_list_select_ingredients"
            android:layout_gravity="center_vertical"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/item_dialog_button_new_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_list_new_string"
            style="@style/primary_button_style"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <ListView
        android:id="@+id/item_dialog_list_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rectangle_border"
        android:layout_below="@id/item_dialog_title_layout"
        />

    <TextView
        android:id="@+id/item_dialog_no_entries_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@drawable/rectangle_border"
        android:text="@string/item_list_no_entries_found"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_below="@+id/item_dialog_title_layout"
        />

    <Button
        android:id="@+id/item_dialog_button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done_string"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@id/item_dialog_list_view"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>